# isafo_plays

./: Cargo.toml
src/: app.rs  main.rs  shader.rs
src/shaders/: compute_test.comp  compute_test.glsl  tri.vert
