[package]
name = "isafo_plays"
version = "0.1.0"
edition = "2021"

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = "0.17"
epi = "0.17"
glam = "0.20"
naga = { version = "0.8", features = ["glsl-in", "spv-out"] }
pollster = "0.2"
wgpu = { version = "0.12", features = ["spirv"] }
winit = "0.26"
zerocopy = "0.6"